styling/style.css
/* Box sizing rules */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* Remove default padding */
ul[class],
ol[class] {
  padding: 0;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
ul[class],
ol[class],
li,
figure,
figcaption,
blockquote,
dl,
dd {
  margin: 0;
}

/* Set core body defaults */
body {
  min-height: 100vh;
  scroll-behavior: smooth;
  text-rendering: optimizeSpeed;
  line-height: 1.5;
}

/* Make images easier to work with */
img {
  max-width: 100%;
  display: block;
}

* {
  box-sizing: border-box;
}

/* Natural flow and rhythm in articles by default */
article > * + * {
  margin-top: 1em;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
  font: inherit;
}


html,
body {
  overflow: auto;
  height: auto;
}

html {
  box-sizing: border-box;
  font-size: 65%;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  min-height: 110%;
}


nav {
  display: block;
  position: relative;
  width: 70%;
  margin: 0 auto;
  text-align: center;
  border-radius: 4px;
  box-shadow: rgba(0, 0, 0, 0.296875) 0 6px 5px;
  background: linear-gradient(rgb(114, 114, 114), rgb(148, 147, 147) 50%, rgb(88, 88, 88) 45%);
  top: 83px;
  z-index: 3;
}

nav li {
  display: flex;
  justify-content: center;
  align-items: center;
  flex: 1;
  list-style: none;
  font-size: 1.4rem;
  font-weight: 600;
  border-width: 0 0.1rem;
  border-style: outset;
  border-color: dimgray;
  height: 36px;
  cursor: pointer;
}

nav li:first-child {
  border-left: none;
  font-size: x-large;
}

nav li:last-child {
  border-right: none;
  cursor: default;
}

nav li:last-child:hover {
  background: linear-gradient(rgb(114, 114, 114), rgb(148, 147, 147) 50%, rgb(88, 88, 88) 45%);
}

nav li:hover {
  background: linear-gradient(rgb(63, 63, 63), rgb(148, 147, 147) 50%, rgb(51, 51, 51) 45%);
  border-radius: 4px;
}

nav a {
  text-decoration: none;
  color: white;

}

nav ul {
  display: flex;
  flex-flow: row wrap;
  justify-content: space-around;
  align-items: center;
  padding-left: 0;
}

#input {
  background: transparent;
  border: 1px solid gray;
  border-radius: 30px;
  border-style: inset;
  width: 135px;
  padding-left: 26px;
  outline: none;
  margin-right: 10px;
  color: white;
}

.input-container {
  display: inline-flex;
  align-items: center;
  margin-left: 24px;
  position: relative;
}

.fa-search {
  position: absolute;
  left: 8px;
  color: white;
}

header {
  display: block;
  position: absolute;
  top: 0;
  bottom: 23%;
  right: auto;
  left: auto;
  width: 100%;
  min-width: 100%;
  background: url('assets/your_verse_hero.jpg') no-repeat 50% 100%;
  background-color: transparent;
}

.header-title {
  display: block;
  position: relative;
  top: 159px;
  bottom: 0;
  width: 72%;
  margin: 0 auto;
  text-align: left;
}

div.header-title h1 a img {
  object-fit: cover;
  object-position: 10px 6px;
}

.inline-header {
  display: block;
  text-align: center;
  position: relative;
  z-index: 10;
  overflow-x: hidden;
  overflow-y: hidden;
  height: 31px;
  margin: 0px auto;
  padding: 0px;
}

h2 {
  text-align: left;
  font-style: normal;
  color: rgb(0, 0, 0);
  font-weight: bold;
  line-height: 18px;
  font-size: 16px;
  margin: 0px 0px 27px;
  padding: 0px;
}

.h3 {
  /*color: rgb(0, 136, 204);
  text-decoration: none;
  display: inline-block;
  height: 86px;
  margin: -31px 18px 25px;*/
  position: relative;
  z-index: 10;
  overflow: hidden;
  height: 31px;
  display: block;
  margin-right: auto;
  margin-left: auto;
}

.h3 a {
  display: inline-block;
  margin-bottom: 25px;
  height: 29px;
}

.h3 a:hover {
  text-decoration: underline;
}

.h3 a img {
  display: inline-block;
}

img {
  max-width: 100%;
  display: block;
}

div .h3 img {
  min-height: 63px;
  max-height: 70px;
}

aside  {
  position: absolute;
  bottom: 0;
  top: 76%;
  margin-left: -39px;
}

ul {
  display: flex;
  flex-flow: row nowrap;
  justify-content: center;
  list-style: none;
}

.phone-pics {
  height: 197px;
}

footer {
  position: absolute;
  top: 113%;
  bottom: 0;
  left: 0;
  right: 0;
  margin: 0 auto;
  padding: 0;
  width: 82%;
  line-height: 2;
  text-align: center;
  color: #6e6e6e;
  text-decoration: none;
  height: 68px;

}

footer a {
  text-decoration: none;
  color: #08c;
}

footer a:hover  {
  text-decoration: underline;
}

.one-line-footer {
  display: flex;
  flex-flow: row;
  justify-content: space-between;
}

.footer-right {
  margin: 0;
  padding: 0;  
}

.footer-right li a {
  border-left: 1px solid gray;
  padding: 0 4px;
}

footer div ul.footer-right li.remove-border a{
  border-left: none;
}

.footer-bottom {
  float: left;
}

.footer-bottom a:last-child {
  border-left: 1px solid gray;
}

.footer-right li a img {
  position: absolute;
  top: 0px;
  right: -18px;
}

